--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,9 +122,9 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply text-black;
   }
 }
